nginx-ingress/nginx-ing-1/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: nginx-ing-1
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
